2006-05-19  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_callback.c (__nis_create_callback): Calls to
	svcudp_bufcreate and svctcp_create can fail.  Free ->xprt if
	asprintf call fails.

	* sysdeps/unix/sysv/linux/ifaddrs.c (__netlink_sendreq): Make sure
	no uninitialized memory is passed to sendto.

2006-05-18  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_callback.c (__nis_create_callback): Use asprinf instead
	of snprintf+strdup.  Handle OOM.
	* nis/nis_callback.c (__nis_create_callback): Allocate cb and
	cb->serv together.  Remove now obsolete free calls.
	(__nis_destroy_callback): Remove now obsolete free call.

2006-05-18  David Woodhouse  <dwmw2@infradead.org>

	* sysdeps/posix/getaddrinfo.c: Add unique labels to the default
	RFC3484 precedence table for fec0::/10 and fc00::/7 (site-local
	and ULA respectively). Set precedence for IPv4 address to 10 as
	defined in RFC3484 for preferring IPv6.
	* posix/gai.conf: Update to match the new default tables.

2006-05-18  Jakub Jelinek  <jakub@redhat.com>

	* nis/nss_compat/compat-pwd.c (internal_setpwent): If nss_set*ent
	returned NSS_STATUS_UNAVAIL, still return NSS_STATUS_SUCCESS.
	* nis/nss_compat/compat-spwd.c (internal_setspent): Likewise.
	* nis/nss_compat/compat-grp.c (internal_setgrent): Likewise.

	* nis/nss_compat/compat-initgroups.c (nss_setgrent, nss_endgrent):
	Removed.
	(init_nss_interface): Remove initialization of these variables.

2006-05-18  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_call.c (rec_dirsearch): Little optimization: pull
	nis_free_directory forward to avoid duplication.

2006-05-17  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_call.c (rec_dirsearch): Handle __nis_finddirectory and
	rec_dirsearch returning NULL.
	(first_shoot): Handle __nis_finddirectory returning NULL.
	(__nisfind_server): Fix leak when rec_dirsearch returns NULL.

	* sysdeps/unix/sysv/linux/sys/inotify.h: Define IN_CLOSE, IN_MOVE,
	IN_ONLYDIR, IN_DONT_FOLLOW, and IN_MASK_ADD.
